Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26844

CoreWLAN crash on Mac OS X due to undefined selector

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 4.8.6, 5.2.0
    • 4.8.2, 4.8.4, 5.0.0
    • None
    • Mac OS X
    • macOS
    • qtbase/08f3177fdfc9aefbd4232dcd1529b537b2ca9402, qt4/3d940a116770ec6b03f7ccef4a989760f6a2aee5

      Observing qcorewlanengine.mm (http://qt.gitorious.org/qt/qt/blobs/4720003c8f52ad7ecb59be04e1b5aa319c2f0ff0/src/plugins/bearer/corewlan/qcorewlanengine.mm), it seems that notificationHandler is defined without parameters on line 86, however referenced as having one parameter, @selector(notificationHandler:), on line 104.

      This sometimes causes an open application to crash when the WLAN interface wakes up from sleep (see attached log of spyderlib).

        1. qt-crash.txt
          4 kB
          Shachar Itzhaky
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dedietri Gabriel de Dietrich (drgvond)
            corwin.amber Shachar Itzhaky
            Votes:
            3 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes